objects/Asset_Mac__c.object
<CustomObject>
    <fields>
        <fullName>AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetId</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Macs</relationshipLabel>
        <relationshipName>Asset_Macs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Asset Mac</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Asset Mac Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Macs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>